fixed z-index issue with mobile scrolling and nav

--- a/client/src/WebApp/components/Header/Header.css
+++ b/client/src/WebApp/components/Header/Header.css
@@ -2,6 +2,7 @@
     padding: 1rem 0;
     position: sticky;
     top:0;
+    z-index: 5;
 }
 
 .chat .header-inner{
